tests/ui/rfcs/rfc-0000-never_patterns/ICE-119271-never-arm-attr-in-guard.stderr
error[E0658]: attributes on expressions are experimental
  --> $DIR/ICE-119271-never-arm-attr-in-guard.rs:7:16
   |
LL |             if #[deny(unused_mut)]
   |                ^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #15701 <https://github.com/rust-lang/rust/issues/15701> for more information
   = help: add `#![feature(stmt_expr_attributes)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: `!` patterns are experimental
  --> $DIR/ICE-119271-never-arm-attr-in-guard.rs:5:14
   |
LL |         Some(!)
   |              ^
   |
   = note: see issue #118155 <https://github.com/rust-lang/rust/issues/118155> for more information
   = help: add `#![feature(never_patterns)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: a guard on a never pattern will never be run
  --> $DIR/ICE-119271-never-arm-attr-in-guard.rs:8:13
   |
LL |             false
   |             ^^^^^ help: remove this guard

error: mismatched types
  --> $DIR/ICE-119271-never-arm-attr-in-guard.rs:5:14
   |
LL |         Some(!)
   |              ^ a never pattern must be used on an uninhabited type
   |
   = note: the matched value is of type `u32`

error[E0004]: non-exhaustive patterns: type `bool` is non-empty
  --> $DIR/ICE-119271-never-arm-attr-in-guard.rs:10:11
   |
LL |     match false {}
   |           ^^^^^
   |
   = note: the matched value is of type `bool`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern as shown
   |
LL ~     match false {
LL +         _ => todo!(),
LL ~     }
   |

error: aborting due to 5 previous errors

Some errors have detailed explanations: E0004, E0658.
For more information about an error, try `rustc --explain E0004`.
